# alphabase

./: .bumpversion.cfg  .bumpversion.toml  .gitconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  HISTORY.md  MANIFEST.in  Makefile  README.md  REFACTOR.md  pyproject.toml  requirements.txt  ruff-lint-psm-readers.toml  settings.ini  setup.py  test_sage_reader.py
alphabase/: __init__.py  _modidx.py  _nbdev.py  cli.py  gui.py  numba_wrapper.py  quant_reader.py  test_data_downloader.py  utils.py  yaml_utils.py
docs/: _config.yml  aa.html  about_alphabase.rst  alphabase.constants.element.rst  alphabase.constants.isotope.rst  alphabase.io.hdf.rst  alphabase.psm_reader.alphapept_reader.rst  alphabase.psm_reader.msfragger_reader.rst  alphabase.psm_reader.psm_reader.rst  alphabase.scoring.ml_scoring_base.rst  alphabase.spectral_library.base.rst  alphabase.spectral_library.decoy.rst  alphapept_reader.html  api.rst  conf.py  decoy_library.html  dia_psm_reader.html  dia_search_reader.html  element.html  fasta.html  fragment.html  hdf.html  index.html  index.rst  installation.rst  isotope.html  library_base.html  mass_calc.html  maxquant_reader.html  mobility.html  modification.html  modules_constants.rst  modules_io.rst  modules_peptide.rst  modules_pg_reader.rst  modules_protein.rst  modules_psm_reader.rst  modules_scoring.rst  modules_spectral_library.rst  modules_statistics.rst  (+13 more)
extra_requirements/: development.txt  smiles.txt  tests.txt
misc/: bumpversion.cfg  check_version.sh  checklist.txt  conda_dev_env.yaml  loose_pip_install.sh  pip_install.sh  stable_pip_install.sh
nbdev_nbs/: _quarto.yml  index.ipynb  nbdev.yml  sidebar.yml  utils.ipynb  yaml_utils.ipynb
nbs/: README.md  modification.tsv  nist_element.yaml  tutorial.ipynb  tutorial_user.ipynb  unimod.xml  unimod.yaml  unimod_to_tsv.ipynb  unimod_to_yaml.ipynb
nbs_tests/: conftest.py  test_flat_to_base.ipynb  test_isotope_calc.ipynb  test_isotope_mp.ipynb  test_thread.ipynb
requirements/: requirements.txt  requirements_dask.txt  requirements_dask_loose.txt  requirements_dev.txt  requirements_development.txt  requirements_docs.txt  requirements_full.txt  requirements_full_loose.txt  requirements_hdf_loose.txt  requirements_loose.txt  requirements_mzml.txt  requirements_mzml_loose.txt  requirements_smiles.txt  requirements_tests.txt
scripts/: README.md  emass_element.yaml  nist_chem_to_yaml.ipynb  unimod.xml  unimod_to_tsv.ipynb
sphinx_docs/: alphabase.constants.isotope.rst  alphabase.constants.modification.rst  alphabase.protein.fasta.rst  alphabase.psm_reader.dia_psm_reader.rst  alphabase.psm_reader.maxquant_reader.rst  alphabase.psm_reader.pfind_reader.rst  conf.py  modules_io.rst  (+7 more)
(+439 files in other folders)
